fixed bootstrap quirky spacing

--- a/bootstrap/stylesheets/app.css
+++ b/bootstrap/stylesheets/app.css
@@ -45,9 +45,9 @@ h2 {
 
 
 .holder {
-	padding: 0px 0 50px 0;
+	padding: 40px 0 0 0;
     margin-top:10px;
-  margin-bottom:15px;
+  margin-bottom:0px;
 
 }
 .holder-big {
@@ -60,7 +60,7 @@ h2 {
 
 }
 .center-box{
-  margin: 0 auto;
+  margin: -20px auto 0 auto;
   background-image: url(../images/header3.jpg);
   background-repeat: no-repeat;
   background-position: center;
